--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Klingenberg AAU</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="../nandorracz.github.io/css/master.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p>If you see this that means it works! bitch</p>
+  <div class="selector-container">
+    <h1>Klingenberg AAU</h1>
+    <p>Myrdalstraede 268 - 9220 Aalborg</p>
+    <div class="restaurant-button" id="cafe">
+      <h2>Café Campus AAU</h2>
+      <a href="tel:98158282">Tlf: 98158282</a>
+      <p class="description">Coffee, snacks, sandwiches</p>
+      <p class="seemore">Click here to see more</p>
+    </div>
+    <div class="restaurant-button" id="bella">
+      <img src="../nandorracz.github.io/img/bellaitalia-logo.png" alt="">
+      <a href="tel:98153488">Tlf: 98153488</a>
+      <p class="description">Pizza, kebab, grill, salads</p>
+      <p class="seemore">Click here to see more</p>
+    </div>
+  </div>
 </body>
 </html>
