--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <p>Myrdalstraede 268 - 9220 Aalborg</p>
     <div class="restaurant-button" id="cafe">
       <h2>Café Campus AAU</h2>
-      <a href="tel:98158282">Tlf: 98158282</a>
+      <a class="phone" href="tel:98158282">Tlf: 98 15 82 82</a>
       <p class="description">Coffee, snacks, sandwiches</p>
-      <p class="seemore">Click here to see more</p>
+      <a class="seemore" href="https://www.google.com" target="_blank">Click here to see more</a>
     </div>
     <div class="restaurant-button" id="bella">
       <img src="../nandorracz.github.io/img/bellaitalia-logo.png" alt="">
-      <a href="tel:98153488">Tlf: 98153488</a>
+      <a class="phone" href="tel:98153488">Tlf: 98 15 34 88</a>
       <p class="description">Pizza, kebab, grill, salads</p>
-      <p class="seemore">Click here to see more</p>
+      <a class="seemore" href="https://www.google.com" target="_blank">Click here to see more</a>
     </div>
   </div>
 </body>
