--- a/index.html
+++ b/index.html
@@ -2,26 +2,37 @@
 <html>
 <head>
   <title>Klingenberg AAU</title>
+  <!--
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/css/master.css">
+  -->
+  <script
+			  src="https://code.jquery.com/jquery-3.6.1.min.js"
+			  integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+			  crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="../nandorracz.github.io/css/master.css">
+  <script type="text/javascript" src="../nandorracz.github.io/js/script.js"></script>
 </head>
 <body>
   <div class="selector-container">
+
     <h1>Klingenberg AAU</h1>
     <p>Myrdalstraede 268 - 9220 Aalborg</p>
+
     <div class="restaurant-button" id="cafe">
       <h2>Café Campus AAU</h2>
       <a class="phone" href="tel:98158282">Tlf: 98 15 82 82</a>
       <p class="description">Coffee, snacks, sandwiches</p>
-      <a class="seemore" href="https://www.google.com" target="_blank">Click here to see more</a>
+      <a class="seemore" href="../nandorracz.github.io/pages/cafe.html" target="_blank">Click here to see more</a>
     </div>
+
     <div class="restaurant-button" id="bella">
-      <img src="/img/bellaitalia-logo.png" alt="">
+      <img src="../nandorracz.github.io/img/bellaitalia-logo.png" alt="">
       <a class="phone" href="tel:98153488">Tlf: 98 15 34 88</a>
       <p class="description">Pizza, kebab, grill, salads</p>
-      <a class="seemore" href="https://www.google.com" target="_blank">Click here to see more</a>
+      <a class="seemore" href="../nandorracz.github.io/pages/bella.html" target="_blank">Click here to see more</a>
     </div>
+
   </div>
 </body>
 </html>
