--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 			  src="https://code.jquery.com/jquery-3.6.1.min.js"
 			  integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
 			  crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="../nandorracz.github.io/css/master.css">
-  <script type="text/javascript" src="../nandorracz.github.io/js/script.js"></script>
+  <link rel="stylesheet" href="/css/master.css">
+  <script type="text/javascript" src="/js/script.js"></script>
 </head>
 <body>
   <div class="selector-container">
@@ -23,14 +23,14 @@
       <h2>Café Campus AAU</h2>
       <a class="phone" href="tel:98158282">Tlf: 98 15 82 82</a>
       <p class="description">Coffee, snacks, sandwiches</p>
-      <a class="seemore" href="../nandorracz.github.io/pages/cafe.html" target="_blank">Click here to see more</a>
+      <a class="seemore" href="/pages/cafe.html" target="_blank">Click here to see more</a>
     </div>
 
     <div class="restaurant-button" id="bella">
       <img src="../nandorracz.github.io/img/bellaitalia-logo.png" alt="">
       <a class="phone" href="tel:98153488">Tlf: 98 15 34 88</a>
       <p class="description">Pizza, kebab, grill, salads</p>
-      <a class="seemore" href="../nandorracz.github.io/pages/bella.html" target="_blank">Click here to see more</a>
+      <a class="seemore" href="/pages/bella.html" target="_blank">Click here to see more</a>
     </div>
 
   </div>
