--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="restaurant-button" id="bella">
-      <img src="../nandorracz.github.io/img/bellaitalia-logo.png" alt="">
+      <img src="img/bellaitalia-logo.png" alt="">
       <a class="phone" href="tel:98153488">Tlf: 98 15 34 88</a>
       <p class="description">Pizza, kebab, grill, salads</p>
       <a class="seemore" href="/pages/bella.html" target="_blank">Click here to see more</a>
