--- a/pages/cafe.html
+++ b/pages/cafe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>café Campus AAU</title>
+  <title>Café Campus AAU</title>
   <!--
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
@@ -129,6 +129,9 @@
         <td>
           <a class="phone" href="tel:98158282">Tlf: 98 15 82 82</a>
         </td>
+      </tr>
+      <tr>
+        <td>Add here: Wifi, accepted payment options</td>
       </tr>
     </table>
   </div>
