switched to burg menus

--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
 
     <div class="restaurant-button" id="cafe">
       <h2>Café Campus AAU</h2>
-      <a class="phone" href="tel:98158282">Tlf: 98 15 82 82</a>
+      <p>Myrdalstraede 268</p>
+      <a class="phone" href="tel:004598158282">Tlf:+45 98 15 82 82</a>
       <p class="description">Coffee, snacks, sandwiches</p>
       <a class="seemore" href="/pages/cafe.html" target="_blank">Click here to see more</a>
     </div>
 
     <div class="restaurant-button" id="bella">
       <img src="img/bellaitalia-logo.png" alt="">
-      <a class="phone" href="tel:98153488">Tlf: 98 15 34 88</a>
+      <p>Myrdalstraede 268</p>
+      <a class="phone" href="tel:004598153488">Tlf:+45 98 15 34 88</a>
       <p class="description">Pizza, kebab, grill, salads</p>
       <a class="seemore" href="/pages/bella.html" target="_blank">Click here to see more</a>
     </div>
