stamp cards added

--- a/pages/bella.html
+++ b/pages/bella.html
@@ -41,23 +41,7 @@
             <button id="events">Events</button>
           </li>
         </ul>
-
-    <!-- OLD MENU
-      <div class="bella-nav-menu">
-        <button id="menu">Menu</button>
       </div>
-      <div class="bella-nav-info">
-        <button id="info">Contact</button>
-      </div>
-      <div class="bella-nav-discounts">
-        <button id="info">Discounts</button>
-      </div>
-      <div class="bella-nav-events">
-        <button id="info">Events</button>
-      </div>
-      <div class="bella-nav-reviews">
-        <button id="reviews">Reviews</button>
-      </div> -->
     </div>
   </div>
 
@@ -661,7 +645,10 @@
         </td>
       </tr>
       <tr>
-        <td>Add here: Wifi, accepted payment options</td>
+        <td style="font-size:1.3em; padding-top:15px; padding-bottom:15px;">Free Wifi is availbe, ask for the password at the counter</td>
+      </tr>
+      <tr>
+        <td><img src="../img/paymentcards.png" alt="" style="width:100%"></td>
       </tr>
     </table>
   </div>
@@ -671,7 +658,18 @@
   </div>
 
   <div class="bella-discounts">
-    <h2>Discounts will go here</h2>
+    <h2>Currently available discounts:</h2>
+    <table>
+      <tr>
+        <td>- "Check in" to our location on Facebook for a free coffee!</td>
+      </tr>
+      <tr>
+        <td>- Get a stamp card to earn a stamp for every sandwich you buy, and get your 11th sandwich for free!</td>
+      </tr>
+      <tr>
+        <td><img src="../img/bella-kort.png" alt=""></td>
+      </tr>
+    </table>
   </div>
 
   <div class="bella-events">
