--- a/pages/cafe.html
+++ b/pages/cafe.html
@@ -42,22 +42,6 @@
           </li>
         </ul>
       </div>
-
-    <!-- OLD MENU
-      <div class="cafe-nav-menu">
-        <button id="menu">Menu</button>
-      </div>
-      <div class="cafe-nav-info">
-        <button id="info">Contact</button>
-      </div>
-      <div class="cafe-nav-reviews">
-        <button id="reviews">Reviews</button>
-      </div>
-      <div class="cafe-nav-events">
-        <button id="events">Events</button>
-      </div>
-     -->
-
     </div>
   </div>
 
@@ -148,10 +132,10 @@
         </table>
         <table class="cafe-menu-bold">
           <tr>
-            <th>BEVERAGES</th>
+            <th style="font-size:1.5em;">BEVERAGES</th>
             <th style="color:white;">33cl</th>
             <th style="color:white;">0,5l</th>
-            <th style="text-align:center;">SALADBAR</th>
+            <th style="text-align:center; font-size:1.5em;">SALADBAR</th>
           </tr>
           <tr>
             <td>Soda</td>
@@ -173,7 +157,7 @@
         </table>
         <table class="cafe-menu-bold">
           <tr>
-            <th>COFFEE</th>
+            <th style="font-size:1.5em;">COFFEE</th>
             <th style="color:white;">Small</th>
             <th style="color:white;">Large</th>
           </tr>
@@ -226,7 +210,7 @@
         <td>12:00 - 16:00</td>
       </tr>
     </table>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d627.401156322497!2d9.977672453760935!3d57.014661196669245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464eccd73750deaf%3A0x7d13551c5ca374d8!2sCaf%C3%A9%20Campus%20AAU!5e0!3m2!1sda!2sdk!4v1667430785316!5m2!1sda!2sdk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d627.401156322497!2d9.977672453760935!3d57.014661196669245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464eccd73750deaf%3A0x7d13551c5ca374d8!2sCaf%C3%A9%20Campus%20AAU!5e0!3m2!1sda!2sdk!4v1667430785316!5m2!1sda!2sdk" width="100%" height="700" style="border:1;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <table>
       <tr>
         <td>Myrdalstraede 268</td>
@@ -237,13 +221,27 @@
         </td>
       </tr>
       <tr>
-        <td>Add here: Wifi, accepted payment options</td>
+        <td style="font-size:1.3em; padding-top:15px; padding-bottom:15px;">Free Wifi is availbe, ask for the password at the counter</td>
+      </tr>
+      <tr>
+        <td><img src="../img/paymentcards.png" alt="" style="width:100%"></td>
       </tr>
     </table>
   </div>
 
   <div class="cafe-discounts">
-    <h2>Discounts will go here</h2>
+    <h2>Currently available discounts:</h2>
+    <table>
+      <tr>
+        <td>- "Check in" to our location on Facebook for a free coffee!</td>
+      </tr>
+      <tr>
+        <td>- Get a stamp card to earn a stamp for every sandwich you buy, and get your 11th sandwich for free!</td>
+      </tr>
+      <tr>
+        <td><img src="../img/cafe-kort.png" alt=""></td>
+      </tr>
+    </table>
   </div>
 
   <div class="cafe-reviews">
